samples/_failures_safe/1761529925_e7ebfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c50ddf54.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c50ddf54.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
